--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,80 @@ RCS
 include/minix
 include/net
 cmd/test
+
+# ignore symbolic links
+cmd/sh/db_blok.h
+cmd/sh/db_setbrk.h
+cmd/sh/mmapalloc.h
+cmd/sh/mkfiles.c
+cmd/sh/signames.c
+cmd/sh/sort.h
+
+# Hmmm, ignore binaries (clunky hardcoded)
+cmd/cp/cp
+cmd/less/less
+cmd/levee/lev
+cmd/make/make
+cmd/md5/md5
+cmd/nroff/nroff
+cmd/old/echo
+cmd/old/forktest
+cmd/old/init
+cmd/old/kill
+cmd/old/ln
+cmd/old/mkdir
+cmd/old/oldcat
+cmd/old/oldgrep
+cmd/old/oldls
+cmd/old/oldrm
+cmd/old/oldwc
+cmd/old/sh
+cmd/old/stressfs
+cmd/old/usertests
+cmd/old/zombie
+cmd/sed/sed
+cmd/sh/v7sh
+cmd/simple/basename
+cmd/simple/bdes
+cmd/simple/cal
+cmd/simple/cat
+cmd/simple/cmp
+cmd/simple/comm
+cmd/simple/cut
+cmd/simple/date
+cmd/simple/dirname
+cmd/simple/du
+cmd/simple/echo
+cmd/simple/ed
+cmd/simple/egrep
+cmd/simple/expand
+cmd/simple/false
+cmd/simple/fgrep
+cmd/simple/grep
+cmd/simple/hd
+cmd/simple/head
+cmd/simple/hostname
+cmd/simple/join
+cmd/simple/ln
+cmd/simple/ls
+cmd/simple/man
+cmd/simple/mv
+cmd/simple/printenv
+cmd/simple/rev
+cmd/simple/rm
+cmd/simple/rmdir
+cmd/simple/sleep
+cmd/simple/split
+cmd/simple/strings
+cmd/simple/tail
+cmd/simple/tar
+cmd/simple/tee
+cmd/simple/true
+cmd/simple/uniq
+cmd/simple/wc
+cmd/simple/xargs
+cmd/simple/yes
+cmd/wish/wish
+fs/README
+fs/bin/
+fs/etc/init
